# wiki-atlas-project

./: .gitignore  Dockerfile.api  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml  start.ps1  start.sh  wikimap_prd.md
.github/workflows/: sync-redis-to-postgres.yml
apps/api/: main.py  schemas.py
apps/api/routes/: health.py  jobs.py  main_page.py  nlp.py  pipeline.py  scraper.py  share.py
apps/web/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/scripts/: copy-leaflet-images.mjs
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/map/[slug]/: page.tsx
apps/web/src/components/: ErrorBanner.tsx  ExportButton.tsx  LoadingOverlay.tsx  MapClient.tsx  MapView.tsx  PinPopup.tsx  ResultsHeader.tsx  SearchHistory.tsx  ShareButton.tsx  WikiSearchBar.tsx
apps/web/src/components/landing/: LandingMap.tsx  LandingPage.tsx  SectionPanel.tsx
apps/web/src/hooks/: useMainPageSection.ts  useProcessArticle.ts  useSearchHistory.ts  useStreamProcess.ts
apps/web/src/lib/: api.ts  types.ts
db/postgres/: engine.py  models.py  queries.py
db/redis/: cache.py  landing_cache.py
jobs/: sync_redis_to_postgres.py
lib/types/: __init__.py  models.py
services/geocoder/: __init__.py  geocode.py
services/nlp/: __init__.py  geotagger.py
services/pipeline/: __init__.py  process_main_page.py  process_page.py  stream_page.py
services/scraper/: __init__.py  main_page.py  wikipedia.py
